--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -34,6 +34,6 @@ sky:
 
     admin-secret-key: itcast
 
-    admin-ttl: 7200000
+    admin-ttl: 72000000
 
-    admin-token-name: Authorization
+    admin-token-name: token
